tests/baselines/reference/parserErrorRecovery_ArgumentList2.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList2.ts] ////

parserErrorRecovery_ArgumentList2.ts(2,4): error TS2304: Cannot find name 'bar'.
parserErrorRecovery_ArgumentList2.ts(2,8): error TS1005: ')' expected.


==== parserErrorRecovery_ArgumentList2.ts (2 errors) ====
    function foo() {
       bar(;
       ~~~
!!! error TS2304: Cannot find name 'bar'.
           ~
!!! error TS1005: ')' expected.
    }